syntax = "proto3";

package user;
option go_package = "pkg/pb/logic/user";

service User{
    rpc CheckUserPassword(CheckUserPwdReq) returns (CheckUserPwdResp) {}
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Recharge(RechargeReq) returns (RechargeResp) {}
}

message CheckUserPwdReq {
    string account = 1;
    string password = 2;
}

message CheckUserPwdResp {
    UserInfo user_info = 1;
    int64 balance = 2;
}

enum Gender {
    UNKNOWN = 0;
    FEMALE = 1;
    MALE = 2;
}

message UserInfo {
    uint32 user_id = 1;
    string account = 2;
    string nickname = 3;
    Gender gender = 4;
}

message RegisterReq {
    string account = 1;
    string password = 2;
    string nickname = 3;
    Gender gender = 4;
}

message RegisterResp {
    uint32 user_id = 1;
}

message RechargeReq {
    uint32 user_id = 1;
    int64 delta = 2; // 充值金额
}

message RechargeResp {
}