syntax = "proto3";

package account;
option go_package = "pkg/pb/server/account";

service Account {
    rpc AddUser(AddUserReq) returns (AddUserResp) {}
    rpc CheckPwd(CheckPwdReq) returns (CheckPwdResp) {}
    rpc GetUserByAccount(GetUserByAccountReq) returns (GetUserByAccountResp) {}
    rpc GetUserById(GetUserByIdReq) returns (GetUserByIdResp) {}
}

enum Gender {
    UNKNOWN = 0;
    FEMALE = 1;
    MALE = 2;
}

message AddUserReq {
    string account = 1;
    string password = 2;
    string name = 3;
    Gender gender = 4; // 这类离散类型的值, 或者说枚举类型, 应该用enum类型或者用int类型, 不要用string
}

message AddUserResp {
    uint32 user_id = 1; // uint和int是有区别的, 这里要用uint32
}

// User信息, 应当在登录成功后返回给client, 需要给client知道的信息就往这里面加
message UserInfo {
    uint32 user_id = 1;
    string account = 2;
    string nickname = 3;
    Gender gender = 4;
}

message CheckPwdReq {
    string account = 1;
    string password = 2;
}

message CheckPwdResp {
    UserInfo user_info = 1;
}

message GetUserByAccountReq {
    string account = 1;
}

message GetUserByAccountResp {
    UserInfo user_info = 1;
}

message GetUserByIdReq {
    uint32 user_id = 1;
}

message GetUserByIdResp {
    UserInfo user_info = 1;
}